--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
 
     <string name="app_name">snagit</string>
+    <string name="facebook_app_id">1101347933376711</string>
 </resources>
